# claude-training

./: .flake8  .gitignore  CLAUDE.md  frontend-changes.md  pyproject.toml  query_flow_diagram.txt
.claude/: settings.local.json
backend/: ai_generator.py  app.py  document_processor.py  models.py  rag_system.py  search_tools.py  session_manager.py  vector_store.py
backend/tests/: __init__.py  conftest.py  test_ai_generator.py  test_api.py  test_course_search_tool.py  test_rag_system.py
backend/tests/test_data/: mock_chunks.json  mock_courses.json
frontend/: index.html  script.js  style.css
scripts/: format-code.sh  quality-check.sh
